# Soft-Manipulator-Control

./: README.md
soft_robotics_ws/force_sensor_code/: CMakeLists.txt  netft.cpp  netft_ros.cpp
soft_robotics_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
soft_robotics_ws/install/force-sensor-data-reader/share/force-sensor-data-reader/: package.bash  package.zsh
soft_robotics_ws/install/soft_robot_control/lib/soft_robot_control/: force_sensor_data_reader  motor_control  sensor_reader
soft_robotics_ws/install/soft_robot_control/share/ament_index/resource_index/package_run_dependencies/: soft_robot_control
soft_robotics_ws/install/soft_robot_control/share/ament_index/resource_index/parent_prefix_path/: soft_robot_control
soft_robotics_ws/install/soft_robot_control/share/soft_robot_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
soft_robotics_ws/log/: latest_build
soft_robotics_ws/src/soft_robot_control/: CMakeLists.txt  setup.cfg  setup.py
soft_robotics_ws/src/soft_robot_control/old_code/: motor_control.py  sensor_reader.py
soft_robotics_ws/src/soft_robot_control/soft_robot_control/: force_sensor_data_reader.cpp
